// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/Base/Empty Rectangle 1`] = `
<div
  style="height: 200px; width: 600px;"
>
  <div
    class="Empty"
  />
</div>
`;

exports[`Storyshots components/Base/Empty Square 1`] = `
<div
  style="height: 400px; width: 400px;"
>
  <div
    class="Empty"
  />
</div>
`;
